--- a/miao/html-basic.html
+++ b/miao/html-basic.html
@@ -228,8 +228,21 @@
     <map name="Header">
       <area target="_blank" shape="rect" href="https://www.mi.com/" alt="" coords="50,100,205,185">
       <area target="_blank" shape="circle"  href="" alt="" coords="125,260,80">
-
     </map>
+    <hr>
+
+    <a href="#">点击我会在下面的frame里打开小米商场，但为什么打不开呢？</a><br>
+    <iframe width="300" src="https://nodejs.org/en/" frameborder="1"></iframe><br>
+    <span>
+      怎样&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在这两个字之间空这么大呢？
+    </span><br>
+    <span>
+      怎样在页面中显示下面的内容呢？
+    </span><br>
+    <span>
+       &lt;span>&lt;/span>
+    </span>
+
 
   
 
