--- a/miao/div-img-contain.html
+++ b/miao/div-img-contain.html
@@ -5,50 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      .image-1 p {
+      .image-1 {
         width: 300px;
-        height: 350px;
+        height: 300px;
+        background-image: url(https://tse1-mm.cn.bing.net/th?id=OIP.WGjYSVCjQAP79P8YyNJn8wHaKW&w=149&h=209&c=8&rs=1&qlt=90&pid=3.1&rm=2);
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
         border: 2px solid;
-        padding: 0px;
+        margin-bottom: 20px;
       }
-      p img {
-        width: 100%;
-        height: 100%;
+      img {
+        width: 300px;
+        height: 300px;
+        border: 2px solid;
         object-fit: contain;
-        margin: 0px;
-        xborder: 4px solid violet;
       }
+
       .image-2 p {
         width: 300px;
         height: 350px;
         border: 2px solid;
         padding: 0px;
+        position: relative;
       }
       .image-2 p img {
-        width: 100px;
-        height: 150px;
+        width: 100%;
+        height: 100%;
         object-fit: contain;
         xborder: 2px solid black;
-        margin-left: 100px;
-        margin-top: 100px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        margin: auto;
       }
     </style>
   </head>
   <body>
-    <div class="image-1">
-      <p>
-        <img
-          src="https://cn.bing.com/th?id=OHR.TrueFox_ZH-CN9267249538_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp"
-          alt=""
-        />
-      </p>
-      <p>
-        <img
-          src="https://tse1-mm.cn.bing.net/th?id=OIP.WGjYSVCjQAP79P8YyNJn8wHaKW&w=149&h=209&c=8&rs=1&qlt=90&pid=3.1&rm=2"
-          alt=""
-        />
-      </p>
-    </div>
+    <div class="image-1"></div>
+    <img
+      src="https://tse1-mm.cn.bing.net/th?id=OIP.WGjYSVCjQAP79P8YyNJn8wHaKW&w=149&h=209&c=8&rs=1&qlt=90&pid=3.1&rm=2"
+      alt=""
+    />
+
     <div class="image-2">
       <p>
         <img
