--- a/miao/bootstrap-table.html
+++ b/miao/bootstrap-table.html
@@ -90,7 +90,7 @@
   </style>
 </head>
 <body>
-  <table xborder=1 class="table table-bordered table-borderless table-hover table-striped table-dark xtable-sm">
+  <table xborder=1 class="table table-bordered xtable-borderless table-hover table-striped table-dark xtable-sm">
     <thead>
       <tr>
         <th scope="col">#</th>
