--- a/miao/abs-center.html
+++ b/miao/abs-center.html
@@ -63,8 +63,9 @@
       td {
         height: 300px;
         border: 1px solid;
-        vertical-align: middle;
+        xvertical-align: middle;
         xmargin: 20px;
+        text-align: center;
       }
       .d {
         border: 3px solid blue;
@@ -72,6 +73,8 @@
         xheight: 300px;
         xmargin: auto;
         xtext-align: center;
+        xvertical-align: middle;
+        display: inline-block;
       }
     </style>
   </head>
@@ -92,7 +95,7 @@
     <div class="c">
       x
       <span>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus similique veritatis
+        aaLorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus similique veritatis
         sapiente.
       </span>
     </div>
