--- a/miao/radio-slider.html
+++ b/miao/radio-slider.html
@@ -60,7 +60,7 @@
         background-color: #cfcdd5;
       }
       input {
-        display: none;
+        xdisplay: none;
       }
       .anniu {
         position: absolute;
