--- a/miao/radio-slider-v0.html
+++ b/miao/radio-slider-v0.html
@@ -15,25 +15,29 @@
         height: 350px;
         xoverflow: hidden;
         position: relative;
+        transition: 1s;
       }
       div img {
         position: absolute;
-        left: 100%;
+        xleft: 100%;
         width: 100%;
         height: 100%;
-        xdisplay: none;
+        display: none;
         transition: 1s;
-        opacity: 0;
+        xopacity: 0;
       }
       input:nth-child(1):checked ~ div img:nth-child(1),
       input:nth-child(2):checked ~ div img:nth-child(2),
       input:nth-child(3):checked ~ div img:nth-child(3),
       input:nth-child(4):checked ~ div img:nth-child(4),
       input:nth-child(5):checked ~ div img:nth-child(5) {
-        left: 0;
-        xdisplay: block;
+        xleft: 0;
+        display: block;
         z-index: 10;
-        opacity: 1;
+        xopacity: 1;
+      }
+      input {
+        xdisplay: none;
       }
     </style>
   </head>
