--- a/miao/basic-coding.html
+++ b/miao/basic-coding.html
@@ -95,9 +95,8 @@
       var y1 = Number(prompt())
       var x2 = Number(prompt())
       var y2 = Number(prompt())
-      
-      var dx = x1 -x2
-      var dy = y1 -y2
+      var dx = x1 - x2
+      var dy = y1 - y2
       var r = Math.sqrt(dx * dx + dy * dy)
       console.log(r)
     </script>
@@ -109,13 +108,13 @@
       var x3 = Number(prompt())
       var y3 = Number(prompt())
 
-      var d1 = Math.sqrt((x1 - x2) * (x1 - x2) + (y1 - y2) * (y1 - y2))
-      var d2 = Math.sqrt((x3 - x2) * (x3 - x2) + (y3 - y2) * (y3 - y2))
-      var d3 = Math.sqrt((x3 - x1) * (x3 - x1) + (y3 - y1) * (y3 - y1))
+      var a = Math.sqrt((x1 - x2) * (x1 - x2) + (y1 - y2) * (y1 - y2))
+      var b = Math.sqrt((x3 - x2) * (x3 - x2) + (y3 - y2) * (y3 - y2))
+      var c = Math.sqrt((x1 - x3) * (x1 - x3) + (y1 - y3) * (y1 - y3))
 
-      var a = (d1 + d2 + d3) / 2
-      var b = Math.sqrt( a * (a - d1) * (a - d2) * (a - d3) )
-      console.log(b)
+      var p = (a + b + c) / 2
+      var s = Math.sqrt( p * (p - a) * (p - b) * (p - c) )
+      console.log(s)
     </script>
     <script type="a18" id="ch0103/18">
       var a1 = Number(prompt())
@@ -173,7 +172,7 @@
       var y = Number(prompt())
       if (x > y) {
         console.log('>')
-      } else if ((x == y) {
+      } else if (x == y) {
         console.log('=')
       } else {
         console.log('<')
@@ -251,7 +250,7 @@
       var t2 = a / 3 + 27 + 23
       if (t1 < t2) {
         console.log('walk')
-      } else if (ti == t2) {
+      } else if (t1 == t2) {
         console.log('all')
       } else {
         cconsole.log('bike')
