--- a/miao/basic-coding.html
+++ b/miao/basic-coding.html
@@ -90,7 +90,7 @@
       var y = Number(prompt())
       console.log( n - Math.ceil(y / x))
     </script>
-    <script type="a16" id="ch0103/16">
+    <script type="b16" id="ch0103/16">
       var x1 = Number(prompt())
       var y1 = Number(prompt())
       var x2 = Number(prompt())
@@ -98,23 +98,21 @@
       var dx = x1 - x2
       var dy = y1 - y2
       var r = Math.sqrt(dx * dx + dy * dy)
-      console.log(r)
+      console.log(r.toFixed(3))
     </script>
-    <script type="a17" id="ch0103/17">
+    <script type="b17" id="ch0103/17">
       var x1 = Number(prompt())
       var y1 = Number(prompt())
       var x2 = Number(prompt())
       var y2 = Number(prompt())
       var x3 = Number(prompt())
       var y3 = Number(prompt())
-
       var a = Math.sqrt((x1 - x2) * (x1 - x2) + (y1 - y2) * (y1 - y2))
       var b = Math.sqrt((x3 - x2) * (x3 - x2) + (y3 - y2) * (y3 - y2))
       var c = Math.sqrt((x1 - x3) * (x1 - x3) + (y1 - y3) * (y1 - y3))
-
       var p = (a + b + c) / 2
       var s = Math.sqrt( p * (p - a) * (p - b) * (p - c) )
-      console.log(s)
+      console.log(s.toFixed(2))
     </script>
     <script type="a18" id="ch0103/18">
       var a1 = Number(prompt())
@@ -246,14 +244,14 @@
     </script>
     <script type="b12" id="ch0104/12">
       var a = Number(prompt())
-      var ti = a / 1.2
+      var t1 = a / 1.2
       var t2 = a / 3 + 27 + 23
       if (t1 < t2) {
         console.log('walk')
       } else if (t1 == t2) {
         console.log('all')
       } else {
-        cconsole.log('bike')
+        console.log('bike')
       }
     </script>
     <script type="b13" id="ch0104/13">
