--- a/miao/basic-coding.html
+++ b/miao/basic-coding.html
@@ -594,9 +594,9 @@
     <script type="c17" id="ch0105/17">
       var K = Number(prompt())
        
-      var x1 = 1
+      var x1 = 0
       var x2 = 1 
-      for (var i = 1; i < K; i++) {
+      for (var i = 0; i < K; i++) {
         var next = x1 + x2 
         x1 = x2 
         x2 = next
@@ -935,7 +935,7 @@
       }
       console.log(sum)
     </script>
-    <script type="" id="ch0105/41">
+    <script type="c41" id="ch0105/41">
       var t = Number(prompt())
       var n = Number(prompt())
       var sum = 0
